v1.?.??? -
Additions:
* It is now possible to define Custom ItemPools in itempools.xml. (the Id can be obtained using Isaac.GetPoolIdByName(poolName))
* Isaac:
	- GetPoolIdByName(string Name) - returns -1 if the pool is not found.
* EntityNPC:
	- SetFlyingOverride(bool) - Sets an override to the return value of IsFlying, which is normally based on EntityGridCollisionClass. Can be used to make grounded enemies ignore creep, or flying enemies get hit by creep.
	- ClearFlyingOverride() - Removes any value set by SetFlyingOverride.
* EntityLaser:
	- RecalculateSamplesNextUpdate() - Requests the laser's shape to be fully recalculated next time it updates. Can be used to force the laser to instantly change its MaxDistance/Radius instead of transitioning to it. No effect for OneHit or non-sample lasers.
* EntityPickup:
	- TriggerTheresOptionsPickup() - Removes pickups with the same option group (OptionsPickupIndex) as the target pickup.
* LayerState:
	- GetFlip[X/Y](), SetFlip[X/Y]()
* Room:
	- SetItemPool(ItemPoolType PoolType) - Sets the pool to use when the game needs to generate random collectibles in the current room.
	- GetItemPool(int Seed, boolean Raw) - Retrieves the pool the game would use to generate random collectibles in the current room.
Fixes:
	- Fix a vanilla bug that caused Hush's laser attack to ignore a room's slowdown state and always chase the player at full speed
	- Restore/fix the vein effect in Hush's boss room pre-Repentance
	- Fix ???/Blue Womb rooms generating in The Void even when not using Better Void Generation
	- Fix Void Portal rooms potentially not being generated in The Void
	- Fix room weights not correctly being reset when reseeding in The Void
	- Temporarily disable modified RoomDescriptor.OverrideData handling to prevent potential cases of it not being properly replaced
/newline/
v1.0.10c -
Additions:
* RoomDescriptor:
	InitSeeds(RNG)
* ModCallbacks:
	- MC_PRE_PLAYER_ADD_COSTUME(ItemConfigItem, Player, ItemStateOnly)